--- a/index.html
+++ b/index.html
@@ -24,12 +24,6 @@
       font-weight: 700;
     }
 
-    .no-scrollbar {
-      -ms-overflow-style: none;
-      /* IE and Edge */
-      scrollbar-width: none;
-      /* Firefox */
-    }
   </style>
 </head>
 
@@ -148,9 +142,10 @@
   </header>
 
   <!-- Hero Banner -->
-  <section aria-label="Hero Image" class="w-full h-96 md:h-screen bg-cover bg-center"
-    style="background-image: url('https://static.vecteezy.com/system/resources/previews/004/928/975/original/travel-around-the-world-landmark-design-famous-landmarks-around-the-world-elements-with-travel-vacation-text-in-blue-background-illustration-vector.jpg');">
-  </section>
+  <section
+  class="w-full h-64 sm:h-80 md:h-screen bg-cover bg-center bg-no-repeat"
+  style="background-image: url('https://static.vecteezy.com/system/resources/previews/004/928/975/original/travel-around-the-world-landmark-design-famous-landmarks-around-the-world-elements-with-travel-vacation-text-in-blue-background-illustration-vector.jpg');">
+</section>
 
   <section class="bg-gray-200 py-12 px-4 md:px-16 lg:px-32">
     <div class="max-w-4xl mx-auto text-center">
