--- a/stays.html
+++ b/stays.html
@@ -63,10 +63,12 @@
     </div>
   </nav>
 
-    <!-- Hero Image -->
-    <div
-        class="w-full h-[50vh] md:h-[70vh] bg-[url('https://imgcdn.flamingotravels.co.in/Images/Country/switzerland-best-time-to-visit.jpg')] bg-cover bg-center">
-    </div>
+
+<!--banner-->
+
+<div
+    class="opacity-80 w-full h-64 md:h-90 bg-[url('https://static.techsembly.com/7CGW89Koxio3h1hNgEgKHNrc')] bg-cover bg-center">
+  </div>
 
   <!-- Search Bar Section -->
   <div class="bg-gray-100 max-w-5xl mx-auto mt-10 p-6 shadow rounded-lg border">
