--- a/bookings.html
+++ b/bookings.html
@@ -30,13 +30,13 @@
         * {
             font-family: 'Alegreya', serif;
             font-weight: 700;
-            background-color: #FDF6E3;
+            /* background-color: #FDF6E3; */
             font-style: normal;
         }
     </style>
 </head>
 
-<body class="bg-gray-50 text-gray-800">
+<body class="bg-[#FDF6E3] text-gray-800">
 
     <!--navbar-->
     <nav class="">
@@ -128,7 +128,7 @@
                 </div>
 
                 <div class="text-right mt-4">
-                    <button class="bg-blue-600 text-black px-6 py-2 rounded-full hover:bg-blue-700">Search
+                    <button class="bg-blue-600 text-white px-6 py-2 rounded-full hover:bg-blue-700 shadow">Search
                         Flights</button>
                 </div>
             </div>
@@ -178,7 +178,7 @@
                     <input type="date" class="w-full border rounded px-3 py-2" />
                 </div>
                 <div class="text-right mt-4">
-                    <button class="bg-green-600 text-black px-6 py-2 rounded-full hover:bg-green-700">Search
+                    <button class="bg-green-600 text-white px-6 py-2 rounded-full hover:bg-green-700 shadow">Search
                         Trains</button>
                 </div>
             </div>
@@ -226,7 +226,7 @@
                     <input type="date" class="w-full border rounded px-3 py-2" />
                 </div>
                 <div class="text-right mt-4">
-                    <button class="bg-red-600 text-black px-6 py-2 rounded-full hover:bg-red-700">Search Buses</button>
+                    <button class="bg-red-600 text-white px-6 py-2 rounded-full hover:bg-red-700 shadow">Search Buses</button>
                 </div>
             </div>
 
@@ -278,7 +278,7 @@
                     <input type="time" class="w-full border rounded px-3 py-2" />
                 </div>
                 <div class="text-right mt-4">
-                    <button class="bg-yellow-500 text-black px-6 py-2 rounded-full hover:bg-yellow-600">Search
+                    <button class="bg-yellow-500 text-white px-6 py-2 rounded-full hover:bg-yellow-600">Search
                         Cars</button>
                 </div>
             </div>
@@ -319,7 +319,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="bg-black text-white py-10">
+    <footer class="bg-[#FDF6E3] text-white py-10">
         <div class="max-w-7xl mx-auto px-4 grid grid-cols-1 md:grid-cols-4 gap-8">
 
             <!-- Logo and Social Icons -->
