--- a/adventures1.html
+++ b/adventures1.html
@@ -80,10 +80,15 @@
 
     <body class="bg-gray-50 text-gray-800">
 
+<!--banner-->
+
+<div
+    class="opacity-80 w-full h-64 md:h-90 bg-[url('https://cdn11.bigcommerce.com/s-34mbaxq6h1/images/stencil/1280w/carousel/10/Sawyer-Oars-Banner.jpg?c=1')] bg-cover bg-center">
+  </div>
 
         <!-- Main Content -->
         <div class="max-w-7xl mx-auto px-4 py-8">
-            <h2 class="text-2xl text-center font-semibold mb-6">Most Thrilling Adventures Offered Worldwide</h2>
+            <h2 class="text-2xl text-center font-semibold mb-6">Most Thrilling Adventures Offered Worldwide !!!</h2>
 
             <div id="serviceList" class="grid md:grid-cols-2 gap-6">
 
