--- a/stays.html
+++ b/stays.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vinodhayatra :: India Tour</title>
+    <title>Vinodhayatra :: Stays</title>
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -17,8 +17,8 @@
         crossorigin="anonymous" />
 
     <!-- Favicon -->
-    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4287/4287725.png" />
-    <link rel="stylesheet" href="hotel.html">
+    <link rel="icon" href="./media/favicon.png" />
+    
 </head>
 
 <body class="bg-[#FDF6E3] font-['Alegreya'] font-bold text-black">
@@ -36,7 +36,7 @@
         <!-- Centered Nav Links -->
         <div class="hidden md:flex space-x-8 items-center absolute left-1/2 transform -translate-x-1/2">
           <a href="./index.html" class="text-black-700 hover:text-purple-600 text-2xl">HOME</a>
-          <a href="./destination.html" class="text-black-700 hover:text-purple-600 text-2xl">DESTINATIONS</a>
+          <a href="./destination.html" class="text-black-700 hover:text-purple-600 text-2xl">HOLIDAYS</a>
           <a href="./stays.html" class="text-black-700 hover:text-purple-600 text-2xl">STAYS</a>
           <a href="./services.html" class="text-black-700 hover:text-purple-600 text-2xl">SERVICES</a>
           <a href="./bookings.html" class="text-black-700 hover:text-purple-600 text-2xl">BOOKINGS</a>
@@ -56,7 +56,7 @@
     <!-- Mobile Menu -->
     <div id="mobile-menu" class="md:hidden hidden px-4 pt-13 pb-4 space-y-1">
       <a href="./index.html" class="block text-gray-700 hover:text-indigo-600 text-xl">HOME</a>
-      <a href="./destination.html" class="block text-gray-700 hover:text-indigo-600 text-xl">DESTINATIONS</a>
+      <a href="./destination.html" class="block text-gray-700 hover:text-indigo-600 text-xl">HOLIDAYS</a>
       <a href="./stays.html" class="block text-gray-700 hover:text-indigo-600 text-xl">STAYS</a>
       <a href="./services.html" class="block text-gray-700 hover:text-indigo-600 text-xl">SERVICES</a>
       <a href="./bookings.html" class="block text-gray-700 hover:text-indigo-600 text-xl">BOOKINGS</a>
@@ -87,8 +87,8 @@
   </div>
 
   <!-- Membership Promo -->
-  <div class="bg-gray-100 text-dark text-center p-4 mt-6">
-    <p class="font-medium">Members save 20% on over 20,000 hotels worldwide when signed in</p>
+  <div class="bg-[#F88379] text-dark text-center p-4 mt-6">
+    <p class="text-2xl">Members save 20% on over 20,000 hotels worldwide when signed in</p>
   </div>
 
   <!-- Centered Promo Cards -->
