--- a/cuisine.html
+++ b/cuisine.html
@@ -77,10 +77,17 @@
             <a href="./bookings.html" class="block text-gray-700 hover:text-indigo-600 text-xl">BOOKINGS</a>
         </div>
     </nav>
+    
+    <div class="relative w-full h-64 md:h-90 overflow-hidden">
+  <video autoplay muted loop playsinline class="absolute top-0 left-0 w-full h-full object-cover opacity-90">
+    <source src="https://videos.pexels.com/video-files/3195650/3195650-uhd_2560_1440_25fps.mp4" type="video/mp4" />
+    Your browser does not support the video tag.
+  </video>
+</div>
 
   <!-- Main Content -->
   <div class="max-w-7xl mx-auto px-4 py-8">
-    <h2 class="text-2xl text-center font-semibold mb-6">Top Cuisines From Around the World</h2>
+    <h2 class="text-3xl text-center font-semibold mb-6">Top Cuisines From Around the World !!!</h2>
 
     <div id="cuisineList" class="grid md:grid-cols-2 gap-6">
 
