--- a/destination.html
+++ b/destination.html
@@ -55,6 +55,8 @@
           <a href="./stays.html" class="text-black-700 hover:text-purple-600 text-2xl">STAYS</a>
           <a href="./services.html" class="text-black-700 hover:text-purple-600 text-2xl">SERVICES</a>
           <a href="./bookings.html" class="text-black-700 hover:text-purple-600 text-2xl">BOOKINGS</a>
+          <a href="./contact.html" class="text-black-700 hover:text-purple-600 text-2xl">CONTACT</a>
+
         </div>
 
         <!-- Mobile menu button -->
