--- a/bookings.html
+++ b/bookings.html
@@ -55,6 +55,8 @@
                     <a href="stays.html" class="text-black-700 hover:text-purple-600 text-2xl">STAYS</a>
                     <a href="services.html" class="text-black-700 hover:text-purple-600 text-2xl">SERVICES</a>
                     <a href="bookings.html" class="text-black-700 hover:text-purple-600 text-2xl">BOOKINGS</a>
+                    <a href="./contact.html" class="text-black-700 hover:text-purple-600 text-2xl">CONTACT</a>
+
                 </div>
 
                 <!-- Mobile menu button -->
@@ -226,7 +228,8 @@
                     <input type="date" class="w-full border rounded px-3 py-2" />
                 </div>
                 <div class="text-right mt-4">
-                    <button class="bg-red-600 text-white px-6 py-2 rounded-full hover:bg-red-700 shadow">Search Buses</button>
+                    <button class="bg-red-600 text-white px-6 py-2 rounded-full hover:bg-red-700 shadow">Search
+                        Buses</button>
                 </div>
             </div>
 
