--- a/services.html
+++ b/services.html
@@ -39,44 +39,45 @@
 <body class="bg-[#FDF6E3]">
   <!--navbar-->
   <nav class="">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative">
-            <div class="flex justify-between items-center h-16 relative">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative">
+      <div class="flex justify-between items-center h-16 relative">
 
-                <!-- Logo (left) -->
-                <div class="flex items-center" style="width: 180px;">
-                    <a href="#" class=""><img src="./media/favicon.png" alt=""></a>
-                </div>
-
-                <!-- Centered Nav Links -->
-                <div class="hidden md:flex space-x-8 items-center absolute left-1/2 transform -translate-x-1/2">
-                    <a href="./index.html" class="text-black-700 hover:text-purple-600 text-2xl">HOME</a>
-                    <a href="./holidays.html" class="text-black-700 hover:text-purple-600 text-2xl">HOLIDAYS</a>
-                    <a href="stays.html" class="text-black-700 hover:text-purple-600 text-2xl">STAYS</a>
-                    <a href="services.html" class="text-black-700 hover:text-purple-600 text-2xl">SERVICES</a>
-                    <a href="bookings.html" class="text-black-700 hover:text-purple-600 text-2xl">BOOKINGS</a>
-                </div>
-
-                <!-- Mobile menu button -->
-                <div class="md:hidden flex items-center">
-                    <button id="menu-btn" class="text-black focus:outline-none">
-                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M4 6h16M4 12h16M4 18h16" />
-                        </svg>
-                    </button>
-                </div>
-            </div>
+        <!-- Logo (left) -->
+        <div class="flex items-center" style="width: 180px;">
+          <a href="#" class=""><img src="./media/favicon.png" alt=""></a>
         </div>
 
-        <!-- Mobile Menu -->
-        <div id="mobile-menu" class="md:hidden hidden px-4 pt-13 pb-4 space-y-1">
-            <a href="./index.html" class="block text-gray-700 hover:text-indigo-600 text-xl">HOME</a>
-            <a href="" class="block text-gray-700 hover:text-indigo-600 text-xl">HOLIDAYS</a>
-            <a href="#" class="block text-gray-700 hover:text-indigo-600 text-xl">STAYS</a>
-            <a href="#" class="block text-gray-700 hover:text-indigo-600 text-xl">SERVICES</a>
-            <a href="#" class="block text-gray-700 hover:text-indigo-600 text-xl">BOOKINGS</a>
+        <!-- Centered Nav Links -->
+        <div class="hidden md:flex space-x-8 items-center absolute left-1/2 transform -translate-x-1/2">
+          <a href="./index.html" class="text-black-700 hover:text-purple-600 text-2xl">HOME</a>
+          <a href="./holidays.html" class="text-black-700 hover:text-purple-600 text-2xl">HOLIDAYS</a>
+          <a href="stays.html" class="text-black-700 hover:text-purple-600 text-2xl">STAYS</a>
+          <a href="services.html" class="text-black-700 hover:text-purple-600 text-2xl">SERVICES</a>
+          <a href="bookings.html" class="text-black-700 hover:text-purple-600 text-2xl">BOOKINGS</a>
+          <a href="./contact.html" class="text-black-700 hover:text-purple-600 text-2xl">CONTACT</a>
+
         </div>
-    </nav>
+
+        <!-- Mobile menu button -->
+        <div class="md:hidden flex items-center">
+          <button id="menu-btn" class="text-black focus:outline-none">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+            </svg>
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Mobile Menu -->
+    <div id="mobile-menu" class="md:hidden hidden px-4 pt-13 pb-4 space-y-1">
+      <a href="./index.html" class="block text-gray-700 hover:text-indigo-600 text-xl">HOME</a>
+      <a href="" class="block text-gray-700 hover:text-indigo-600 text-xl">HOLIDAYS</a>
+      <a href="#" class="block text-gray-700 hover:text-indigo-600 text-xl">STAYS</a>
+      <a href="#" class="block text-gray-700 hover:text-indigo-600 text-xl">SERVICES</a>
+      <a href="#" class="block text-gray-700 hover:text-indigo-600 text-xl">BOOKINGS</a>
+    </div>
+  </nav>
 
 
   <!-- Header -->
@@ -126,7 +127,7 @@
     </div>
   </section>
 
-  
+
   <!-- Footer -->
   <footer class="bg-[#FDF6E3] text-white py-10">
     <div class="max-w-7xl mx-auto px-4 grid grid-cols-1 md:grid-cols-4 gap-8">
@@ -198,37 +199,37 @@
 </body>
 
 <script>
-    const btn = document.getElementById('menu-btn');
-    const menu = document.getElementById('mobile-menu');
+  const btn = document.getElementById('menu-btn');
+  const menu = document.getElementById('mobile-menu');
 
-    btn.addEventListener('click', () => {
-        menu.classList.toggle('hidden');
-    });
+  btn.addEventListener('click', () => {
+    menu.classList.toggle('hidden');
+  });
 
 
 
-    //carosel
+  //carosel
 
-    let index = 0;
-    const carousel = document.getElementById("carousel");
-    const totalSlides = carousel.children.length;
+  let index = 0;
+  const carousel = document.getElementById("carousel");
+  const totalSlides = carousel.children.length;
 
-    function updateCarousel() {
-        carousel.style.transform = `translateX(-${index * 100}%)`;
-    }
+  function updateCarousel() {
+    carousel.style.transform = `translateX(-${index * 100}%)`;
+  }
 
-    function nextSlide() {
-        index = (index + 1) % totalSlides;
-        updateCarousel();
-    }
+  function nextSlide() {
+    index = (index + 1) % totalSlides;
+    updateCarousel();
+  }
 
-    function prevSlide() {
-        index = (index - 1 + totalSlides) % totalSlides;
-        updateCarousel();
-    }
+  function prevSlide() {
+    index = (index - 1 + totalSlides) % totalSlides;
+    updateCarousel();
+  }
 
-    // Optional: Auto-slide every 4 seconds
-    setInterval(nextSlide, 4000);
+  // Optional: Auto-slide every 4 seconds
+  setInterval(nextSlide, 4000);
 
 </script>
 
