--- a/index.html
+++ b/index.html
@@ -198,79 +198,79 @@
       <!-- Card -->
       <div
         class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transform transition duration-300 hover:scale-105">
-        <img src="https://wallpaperaccess.com/full/2827309.jpg" alt="Europe" class="w-full h-40 object-cover">
+        <a href="./booking1.html"><img src="https://wallpaperaccess.com/full/2827309.jpg" alt="Europe" class="w-full h-40 object-cover">
         <div class="p-4">
           <h3 class="text-lg font-semibold">Fusion Europe</h3>
           <p class="text-blue-700 font-bold">₹2,76,600.00</p>
           <p class="text-sm text-gray-500">Starting Price</p>
-        </div>
+        </div></a>
       </div>
 
       <div
         class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transform transition duration-300 hover:scale-105">
-        <img src="https://wallpaperaccess.com/full/2751126.jpg" alt="Thailand" class="w-full h-40 object-cover">
+        <a href="./booking1.html"><img src="https://wallpaperaccess.com/full/2751126.jpg" alt="Thailand" class="w-full h-40 object-cover">
         <div class="p-4">
           <h3 class="text-lg font-semibold">Thai Getway</h3>
           <p class="text-blue-700 font-bold">₹58,100.00</p>
           <p class="text-sm text-gray-500">Starting Price</p>
-        </div>
+        </div></a>
       </div>
 
       <div
         class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transform transition duration-300 hover:scale-105">
-        <img src="https://wallpaperaccess.com/full/1722772.jpg" alt="Singapore" class="w-full h-40 object-cover">
+        <a href="./booking1.html"><img src="https://wallpaperaccess.com/full/1722772.jpg" alt="Singapore" class="w-full h-40 object-cover">
         <div class="p-4">
           <h3 class="text-lg font-semibold">Singapore Getway</h3>
           <p class="text-blue-700 font-bold">₹93,600.00</p>
           <p class="text-sm text-gray-500">Starting Price</p>
-        </div>
+        </div></a>
       </div>
 
       <div
         class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transform transition duration-300 hover:scale-105">
-        <img src="https://wallpaperaccess.com/full/1722116.jpg" alt="Australia" class="w-full h-40 object-cover">
+        <a href="./booking1.html"><img src="https://wallpaperaccess.com/full/1722116.jpg" alt="Australia" class="w-full h-40 object-cover">
         <div class="p-4">
           <h3 class="text-lg font-semibold">Grand Bargain Australia</h3>
           <p class="text-blue-700 font-bold">₹3,04,300.00</p>
           <p class="text-sm text-gray-500">Starting Price</p>
-        </div>
+        </div></a>
       </div>
 
       <div
         class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transform transition duration-300 hover:scale-105">
-        <img src="https://wallpaperaccess.com/full/1703474.jpg" alt="Mauritius" class="w-full h-40 object-cover">
+        <a href="./booking1.html"><img src="https://wallpaperaccess.com/full/1703474.jpg" alt="Mauritius" class="w-full h-40 object-cover">
         <div class="p-4">
           <h3 class="text-lg font-semibold">Mauritius</h3>
           <p class="text-blue-700 font-bold">₹2,17,900.00</p>
           <p class="text-sm text-gray-500">Starting Price</p>
-        </div>
+        </div></a>
       </div>
       <div
         class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transform transition duration-300 hover:scale-105">
-        <img src="https://cdn.wallpapersafari.com/54/54/CojyGf.jpg" alt="Dubai" class="w-full h-40 object-cover">
+        <a href="./booking1.html"><img src="https://cdn.wallpapersafari.com/54/54/CojyGf.jpg" alt="Dubai" class="w-full h-40 object-cover">
         <div class="p-4">
           <h3 class="text-lg font-semibold">Dubai</h3>
           <p class="text-blue-700 font-bold">₹1,14,500.00</p>
           <p class="text-sm text-gray-500">Starting Price</p>
-        </div>
+        </div></a>
       </div>
       <div
         class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transform transition duration-300 hover:scale-105">
-        <img src="https://wallpapercave.com/wp/wp4359104.jpg" alt="Australia" class="w-full h-40 object-cover">
+        <a href="./booking1.html"><img src="https://wallpapercave.com/wp/wp4359104.jpg" alt="Australia" class="w-full h-40 object-cover">
         <div class="p-4">
           <h3 class="text-lg font-semibold">Maldivies</h3>
           <p class="text-blue-700 font-bold">₹4,20,000.00</p>
           <p class="text-sm text-gray-500">Starting Price</p>
-        </div>
+        </div></a>
       </div>
       <div
         class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transform transition duration-300 hover:scale-105">
-        <img src="https://wallpapercave.com/wp/wp4233390.jpg" alt="Australia" class="w-full h-40 object-cover">
+        <a href="./booking1.html"><img src="https://wallpapercave.com/wp/wp4233390.jpg" alt="Australia" class="w-full h-40 object-cover">
         <div class="p-4">
           <h3 class="text-lg font-semibold">Switzerland</h3>
           <p class="text-blue-700 font-bold">₹1,74,480.00</p>
           <p class="text-sm text-gray-500">Starting Price</p>
-        </div>
+        </div></a>
       </div>
     </div>
   </section>
@@ -294,27 +294,27 @@
 
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 max-w-6xl mx-auto">
       <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition">
-        <img src="https://cdn.pixabay.com/photo/2017/05/10/13/39/ladakh-2300904_640.jpg" alt="Ladakh"
+        <a href="./adventure.html"><img src="https://cdn.pixabay.com/photo/2017/05/10/13/39/ladakh-2300904_640.jpg" alt="Ladakh"
           class="w-full h-40 object-cover">
         <p class="p-1 text-center">Ladakh</p>
-      </div>
+      </div></a>
       <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition">
-        <img
+        <a href="./india.html"><img
           src="https://th.bing.com/th/id/R.d4b982dc0b9b3b2bf598df85cca53b04?rik=A%2bdvghH3SSORjg&riu=http%3a%2f%2fwallpapercave.com%2fwp%2fcqmpGqQ.jpg&ehk=7bCV%2bNwXKVo2KV8ugI%2fzAK4ltNIoYFntxYUgZZtYYPE%3d&risl=&pid=ImgRaw&r=0"
           alt="Kerala" class="w-full h-40 object-cover">
         <p class="p-1 text-center">Kerala</p>
-      </div>
+      </div></a>
       <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition">
-        <img
+        <a href="./adventure.html"><img
           src="https://static.wixstatic.com/media/8e9165_014ed08d47034ecc8f7e4d3ddd9cbbf0~mv2.jpg/v1/fill/w_768,h_614,al_c,lg_1,q_85/8e9165_014ed08d47034ecc8f7e4d3ddd9cbbf0~mv2.jpg"
           alt="Jim Corbett" class="w-full h-40 object-cover">
         <p class="p-1 text-center">Jim Corbet</p>
-      </div>
+      </div></a>
       <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition">
-        <img src="https://www.worldatlas.com/r/w1200-q80/upload/70/33/ab/shutterstock-115227475.jpg" alt="Kashmir"
+        <a href="./india.html"><img src="https://www.worldatlas.com/r/w1200-q80/upload/70/33/ab/shutterstock-115227475.jpg" alt="Kashmir"
           class="w-full h-40 object-cover">
         <p class="p-1 text-center">Kashmir</p>
-      </div>
+      </div></a>
     </div>
   </section>
 
@@ -409,12 +409,12 @@
     <div>
       <h3 class="text-lg font-semibold mb-4">Information</h3>
       <ul class="space-y-2 text-sm">
-        <li><a href="#" class="hover:text-purple-600">Online Enquiry</a></li>
-        <li><a href="#" class="hover:text-purple-600">General Enquiry</a></li>
-        <li><a href="#" class="hover:text-purple-600">Booking</a></li>
+        <li><a href="./assist.html" class="hover:text-purple-600">Online Enquiry</a></li>
+        <li><a href="./contact.html" class="hover:text-purple-600">General Enquiry</a></li>
+        <li><a href="./bookings.html" class="hover:text-purple-600">Booking</a></li>
         <li><a href="#" class="hover:text-purple-600">Privacy</a></li>
-        <li><a href="#" class="hover:text-purple-600">Refund Policy</a></li>
-        <li><a href="#" class="hover:text-purple-600">Call Us</a></li>
+        <li><a href="./contact.html" class="hover:text-purple-600">Refund Policy</a></li>
+        <li><a href="./contact.html" class="hover:text-purple-600">Call Us</a></li>
       </ul>
     </div>
 
@@ -422,12 +422,12 @@
     <div>
       <h3 class="text-lg font-semibold mb-4">Experience</h3>
       <ul class="space-y-2 text-sm">
-        <li><a href="#" class="hover:text-purple-600">Adventure</a></li>
-        <li><a href="#" class="hover:text-purple-600">Hotel and Restaurant</a></li>
-        <li><a href="#" class="hover:text-purple-600">Beach</a></li>
-        <li><a href="#" class="hover:text-purple-600">Nature</a></li>
-        <li><a href="#" class="hover:text-purple-600">Camping</a></li>
-        <li><a href="#" class="hover:text-purple-600">Party</a></li>
+        <li><a href="./adventure.html" class="hover:text-purple-600">Adventure</a></li>
+        <li><a href="./stays.html" class="hover:text-purple-600">Hotel and Restaurant</a></li>
+        <li><a href="./adventure.html" class="hover:text-purple-600">Beach</a></li>
+        <li><a href="./adventure.html" class="hover:text-purple-600">Nature</a></li>
+        <li><a href="./adventure.html" class="hover:text-purple-600">Camping</a></li>
+        <li><a href="./resort.html" class="hover:text-purple-600">Party</a></li>
       </ul>
     </div>
 
