--- a/booking1.html
+++ b/booking1.html
@@ -83,8 +83,7 @@
   </div>
 
 <div class="py-6 pt-10">
-
-<div class="max-w-3xl mx-auto p-5 pt-10 border rounded shadow">
+  <div class="max-w-3xl mx-auto p-5 pt-10 border rounded shadow bg-white">
     <h2 class="text-xl text-center font-semibold mb-4">Fill in your details</h2>
 
     <!-- Tour Type -->
@@ -106,9 +105,14 @@
         <span>👤</span>
         <span>Travellers</span>
       </div>
-      <div class="ml-8 text-sm text-gray-600 mb-2">Room 1 <button class="text-blue-700 font-semibold ml-2"><span class="text-xl">+</span> Add Room</button></div>
+      <div class="ml-1 sm:ml-8 text-sm text-gray-600 mb-2">
+        Room 1
+        <button class="text-blue-700 font-semibold ml-2">
+          <span class="text-xl">+</span> Add Room
+        </button>
+      </div>
 
-      <div class="grid grid-cols-4 gap-4 text-center">
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4 text-center">
         <!-- Adult -->
         <div>
           <div class="mb-1">Adult</div>
@@ -119,6 +123,7 @@
           </div>
           <div class="text-xs text-gray-500 mt-1">12+ yrs</div>
         </div>
+
         <!-- Child with bed -->
         <div>
           <div class="mb-1">Child (With bed)</div>
@@ -129,6 +134,7 @@
           </div>
           <div class="text-xs text-gray-500 mt-1">Below 12 yrs</div>
         </div>
+
         <!-- Child without bed -->
         <div>
           <div class="mb-1">Child (Without bed)</div>
@@ -139,6 +145,7 @@
           </div>
           <div class="text-xs text-gray-500 mt-1">Below 12 yrs</div>
         </div>
+
         <!-- Infant -->
         <div>
           <div class="mb-1">Infant</div>
@@ -167,7 +174,7 @@
         <span>📞</span>
         <span>Contact Details</span>
       </label>
-      <div class="grid grid-cols-2 gap-4">
+      <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
         <input type="text" placeholder="Mobile" class="border rounded px-3 py-2 w-full" />
         <input type="email" placeholder="Email" class="border rounded px-3 py-2 w-full" />
       </div>
@@ -178,17 +185,21 @@
     <div class="mb-4">
       <label class="inline-flex items-center space-x-2 text-sm">
         <input type="checkbox" class="form-checkbox text-blue-600" checked />
-        <span>I accept the <a href="#" class="text-blue-800 font-semibold">Privacy Policy</a> & <a href="#" class="text-blue-800 font-semibold">Terms & Conditions</a></span>
+        <span>
+          I accept the
+          <a href="#" class="text-blue-800 font-semibold">Privacy Policy</a> &
+          <a href="#" class="text-blue-800 font-semibold">Terms & Conditions</a>
+        </span>
       </label>
     </div>
 
     <!-- Submit Button -->
-    <button class="w-full bg-blue-700 text-white py-3 rounded text-lg font-semibold hover:bg-blue-700 transition">
-  Book Now
-</button>
+    <button class="w-full bg-blue-700 text-white py-3 rounded text-lg font-semibold hover:bg-blue-800 transition">
+      Book Now
+    </button>
 
     <!-- Footer Links -->
-    <div class="flex justify-center space-x-8 text-sm text-blue-700 font-medium border-t mt-6 pt-4">
+    <div class="flex flex-wrap justify-center space-x-4 text-sm text-blue-700 font-medium border-t mt-6 pt-4">
       <a href="#">Payment terms</a>
       <a href="#">Cancellation Policy</a>
       <a href="#">Terms & Conditions</a>
